--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -192,6 +192,12 @@
 
         </FrameLayout>
 
+        <Button
+            android:text="Αναζήτηση Πτήσεων"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/button4" />
+
     </LinearLayout>
 
 </RelativeLayout>
