findViewById for Switches

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,7 +150,7 @@
                 android:text="+/- 3 Ημερών"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/dayswitch" />
+                android:id="@+id/flexdayswitch" />
 
             <View
                 android:layout_width="match_parent"
