--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -77,10 +77,13 @@
                     android:layout_weight="0.75"
                     android:textAlignment="center"
                     android:textStyle="normal|bold"
-                    android:textAllCaps="false"
-                    android:textSize="36sp"
+                    android:textSize="30sp"
                     android:fontFamily="sans-serif"
-                    android:translationY="@dimen/activity_horizontal_margin" />
+                    android:lineSpacingExtra="18sp"
+                    android:elevation="0dp"
+                    android:textAllCaps="false"
+                    android:elegantTextHeight="false"
+                    android:gravity="center_vertical|center_horizontal" />
 
                 <TextView
                     android:text="0"
@@ -88,11 +91,11 @@
                     android:layout_height="match_parent"
                     android:id="@+id/kid_text"
                     android:layout_weight="0.75"
-                    android:translationY="@dimen/activity_horizontal_margin"
-                    android:textSize="36sp"
+                    android:textSize="30sp"
                     android:textAlignment="center"
                     android:textStyle="normal|bold"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    android:gravity="center_vertical|center_horizontal" />
 
                 <TextView
                     android:text="0"
@@ -101,9 +104,9 @@
                     android:id="@+id/baby_text"
                     android:layout_weight="0.75"
                     android:textStyle="normal|bold"
-                    android:textSize="36sp"
+                    android:textSize="30sp"
                     android:textAlignment="center"
-                    android:translationY="@dimen/activity_horizontal_margin" />
+                    android:gravity="center_vertical|center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
@@ -118,21 +121,24 @@
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/adult_icon"
                     android:id="@+id/adult_icon"
-                    android:layout_weight="0.49" />
+                    android:layout_weight="0.49"
+                    android:layout_gravity="center_vertical|center_horizontal" />
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/kid_icon"
                     android:id="@+id/kid_icon"
-                    android:layout_weight="0.49" />
+                    android:layout_weight="0.49"
+                    android:layout_gravity="center_vertical|center_horizontal" />
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:srcCompat="@drawable/baby_icon"
                     android:id="@+id/baby_icon"
-                    android:layout_weight="0.49" />
+                    android:layout_weight="0.49"
+                    android:layout_gravity="center_vertical|center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
@@ -151,7 +157,7 @@
                     android:textAlignment="center"
                     android:textStyle="normal|bold"
                     android:textSize="14sp"
-                    android:translationY="@dimen/activity_horizontal_margin" />
+                    android:gravity="center_vertical|center_horizontal" />
 
                 <TextView
                     android:text="(2-12)"
@@ -159,9 +165,9 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/kid_age"
                     android:layout_weight="0.33"
-                    android:translationY="@dimen/activity_horizontal_margin"
                     android:textStyle="normal|bold"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:gravity="center_vertical|center_horizontal" />
 
                 <TextView
                     android:text="(0-2)"
@@ -169,9 +175,9 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/baby_age"
                     android:layout_weight="0.35"
-                    android:translationY="@dimen/activity_horizontal_margin"
                     android:textStyle="normal|bold"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:gravity="center_vertical|center_horizontal" />
             </LinearLayout>
 
             <LinearLayout
@@ -186,9 +192,9 @@
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/p_icon"
                     android:id="@+id/adult_plus"
-                    android:scaleType="fitCenter"
                     android:layout_weight="1.24"
-                    android:background="@android:color/transparent" />
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter" />
 
                 <ImageButton
                     android:layout_width="match_parent"
